# Amfitrack_SteamVR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy_if_different_directory.cmake  copy_to_release_folder.cmake
driver/amfitrack/: driver.vrdrivermanifest
driver/amfitrack/resources/: driver.vrresources
driver/amfitrack/resources/input/: amfitrack_controller_bindings.json  amfitrack_controller_profile.json  amfitrack_controller_remapping.json  amfitrack_legacy_bindings.json  amfitrack_tracker_bindings.json  amfitrack_tracker_profile.json  amfitrack_tracker_remapping.json  config.txt
driver/amfitrack/resources/settings/: default.vrsettings  settingsschema.vrsettings
inc/: ControllerDriver.h  DeviceProvider.h
resources/: controller_profile.json  driver.vrdrivermanifest  legacy_bindings_Amfitrack.json
src/: ControllerDriver.cpp  DeviceProvider.cpp
src/Driver/: ControllerDevice.cpp  ControllerDevice.hpp  HMDDevice.cpp  HMDDevice.hpp  IVRDevice.hpp  IVRDriver.hpp  PoseHelper.cpp  PoseHelper.hpp  TrackerDevice.cpp  TrackerDevice.hpp  TrackingReferenceDevice.cpp  TrackingReferenceDevice.hpp  VRDriver.cpp  VRDriver.hpp  vrmath.h
src/Native/: DriverFactory.cpp  DriverFactory.hpp
tests/: AmfitrackTests.cpp  CMakeLists.txt
